tests/snapshots/sfc/ts/patches__arrow_function_with_multiple_statements_in_v_for.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, createElementVNode as _createElementVNode, renderList as _renderList, toDisplayString as _toDisplayString } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const items = ref([{ id: 1, value: 0 }])

return (_ctx, _cache) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(items.value, (item) => { return (_openBlock(), _createElementBlock("div", { key: item.id }, [ _createElementVNode("button", { onClick: () => { item.value++; console.log(item.id); } }, _toDisplayString(item.value), 9 /* TEXT, PROPS */, ["onClick"]) ])) }), 128 /* KEYED_FRAGMENT */))
}
}

})
