tests/snapshots/sfc/ts/patches__complex_type_based_props_destructure_with_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { mergeDefaults as _mergeDefaults } from 'vue'
import { defineComponent, PropType } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, createElementVNode as _createElementVNode, renderList as _renderList, toDisplayString as _toDisplayString, normalizeClass as _normalizeClass } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    count: { type: Number as PropType<number>, required: false, default: 0 },
    disabled: { type: Boolean as PropType<boolean>, required: false, default: false },
    items: { type: Array as PropType<string[]>, required: false, default: () => [] },
    title: { type: String as PropType<string>, required: true },
  },
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", { class: _normalizeClass({ disabled: __props.disabled }) }, [ _createElementVNode("h1", null, _toDisplayString(__props.title), 1 /* TEXT */), _createElementVNode("span", null, _toDisplayString(__props.count), 1 /* TEXT */), _createElementVNode("ul", null, [ (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.items, (item) => { return (_openBlock(), _createElementBlock("li", { key: item }, _toDisplayString(item), 1 /* TEXT */)) }), 128 /* KEYED_FRAGMENT */)) ]) ], 2 /* CLASS */))
}
}

})
