tests/snapshots/sfc/ts/patches__default_as_prop_name_should_not_use_shorthand.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import DefaultComponent from './Default.vue'

export default defineComponent({
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createBlock(DefaultComponent))
}
}

})
